# app/controllers/workouts_controller.rb
@@ -60,7 +60,7 @@ class WorkoutsController < ApplicationController
     end
 
     def workout_params
-      params.require(:workout).permit(:title, :workout_on, :notes, :status)
+      params.require(:workout).permit(:title, :workout_on, :workout_type, :notes, :status)
     end
 
     def load_exercises
